[gd_scene load_steps=8 format=3 uid="uid://xpu07bjkfiy8"]

[ext_resource type="Theme" uid="uid://5uta1xlclcoh" path="res://values/navigation_theme.tres" id="1_8m4up"]
[ext_resource type="Script" path="res://entites/global/navigation_bars/navigation_bars.gd" id="2_agq4q"]
[ext_resource type="Texture2D" path="res://assets/textures/dev_art/brehd.png" id="3_mn4hm"]

[sub_resource type="LabelSettings" id="LabelSettings_w4s3d"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6gtb"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="LabelSettings" id="LabelSettings_3ve0a"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_0046q"]
font_size = 18

[node name="NavigationBars" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_8m4up")
script = ExtResource("2_agq4q")

[node name="Top" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 107.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.784314)

[node name="HBoxContainer" type="HBoxContainer" parent="Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_right = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftInfo" type="VBoxContainer" parent="Top/HBoxContainer"]
layout_mode = 2

[node name="TopLabel" type="Label" parent="Top/HBoxContainer/LeftInfo"]
layout_mode = 2
text = "SongTitle - Artist"
label_settings = SubResource("LabelSettings_w4s3d")

[node name="BottomLabel" type="Label" parent="Top/HBoxContainer/LeftInfo"]
layout_mode = 2
text = "ChartTitle - ChartArtist"
label_settings = SubResource("LabelSettings_w4s3d")

[node name="Buffer" type="Control" parent="Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightInfo" type="VBoxContainer" parent="Top/HBoxContainer"]
layout_mode = 2

[node name="TopLabel" type="Label" parent="Top/HBoxContainer/RightInfo"]
layout_mode = 2
text = "Played by rokuhime"
label_settings = SubResource("LabelSettings_w4s3d")
horizontal_alignment = 2

[node name="BottomLabel" type="Label" parent="Top/HBoxContainer/RightInfo"]
layout_mode = 2
text = "2024-07-30 12:00 PM "
label_settings = SubResource("LabelSettings_w4s3d")
horizontal_alignment = 2

[node name="Bottom" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.784314)

[node name="Buttons" type="HBoxContainer" parent="Bottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="Bottom/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Back"

[node name="Button1" type="Button" parent="Bottom/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Button1"

[node name="Control" type="Control" parent="Bottom/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="Bottom/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Button2"

[node name="Button3" type="Button" parent="Bottom/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Button3"

[node name="Profile" type="Panel" parent="Bottom"]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.0
offset_right = 179.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6gtb")

[node name="HBoxContainer" type="HBoxContainer" parent="Bottom/Profile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProfilePicture" type="TextureRect" parent="Bottom/Profile/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_mn4hm")
expand_mode = 1
stretch_mode = 5

[node name="Info" type="VBoxContainer" parent="Bottom/Profile/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Name" type="Label" parent="Bottom/Profile/HBoxContainer/Info"]
layout_mode = 2
text = "rokuhime"
label_settings = SubResource("LabelSettings_3ve0a")

[node name="HSeparator" type="HSeparator" parent="Bottom/Profile/HBoxContainer/Info"]
layout_mode = 2

[node name="Info1" type="Label" parent="Bottom/Profile/HBoxContainer/Info"]
layout_mode = 2
text = "swag gaming"
label_settings = SubResource("LabelSettings_0046q")
